--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=currency-exchange-service
 server.port=8000
 
+
+spring.usern.name=root
+
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
